--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,11 +7,11 @@
   </head>
   <body>
     <h1>GC252 - 송윤정</h1>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa aliquid
-      dicta dolores mollitia inventore laudantium similique explicabo iure harum
-      incidunt repudiandae impedit quidem facilis natus deleniti, recusandae
-      odit fuga itaque?
-    </p>
+    <h2>2주차</h2>
+    <ol>
+      <li><a href="./src/w2/step1/">step1</a></li>
+      <li><a href="./src/w2/step2/">step2</a></li>
+      <li><a href="./src/w2/step3/">step3</a></li>
+    </ol>
   </body>
 </html>
